--- a/_posts/2021-03-02-talleres2.md
+++ b/_posts/2021-03-02-talleres2.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Talleres y Charlas Generales"
+title: "Taller de Introducción a la Academia"
 author: "Econ Mentoring Group"
 categories: talleres
 tags: [documentation,sample, talleres]
@@ -9,8 +9,9 @@ image: arctic-4.jpg
 
 
 
+# Taller de Introducción a la Academia
+
+## Proceso de selección
+
 ## Calendario de temas
-
-## Eventos e información
-
 
