ya no puedo con mas cambios

--- a/_posts/2021-03-02-acerca-de.md
+++ b/_posts/2021-03-02-acerca-de.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Acerca de"
 author: "Econ Mentoring group"
-categories: home
+categories: inicio
 
 <!-- tags indicates in which page is going to appear this document -->
 tags: [documentation,sample,home]
