--- a/_posts/2021-03-02-aliados.md
+++ b/_posts/2021-03-02-aliados.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Aliades"
 author: "Econ Mentoring group"
-categories: home
+categories: oldhome
 
 <!-- tags indicates in which page is going to appear this document -->
 tags: [documentation,sample,home]
