--- a/_posts/2021-03-02-acerca-de.md
+++ b/_posts/2021-03-02-acerca-de.md
@@ -3,10 +3,8 @@ layout: post
 title: "Acerca de"
 author: "Econ Mentoring group"
 categories: inicio
-
-<!-- tags indicates in which page is going to appear this document -->
-tags: [documentation,sample,home]
-image: cuba-1.jpg
+tags: [sample]
+image: firstmeeting.png
 ---
 
 Econ Mentoring LA is a group of young econ professionals from different backgrounds.
