--- a/_posts/2021-03-04-acerca-de.md
+++ b/_posts/2021-03-04-acerca-de.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Acerca de"
 author: "Econ Mentoring group"
-categories: oldinicio
+categories: inicio
 tags: [sample]
 image: firstmeeting.png
 ---
