--- a/_posts/2021-03-04-acerca-de.md
+++ b/_posts/2021-03-04-acerca-de.md
@@ -7,7 +7,7 @@ tags: [sample]
 image: firstmeeting.png
 ---
 
-EMLA es un grupo de economistas de un background diverso
+EconThaki es un grupo de economistas de un background diverso
 
 ## Historia
 
