--- a/_posts/2021-03-02-aliados.md
+++ b/_posts/2021-03-02-aliados.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Aliades"
-author: "Econ Mentoring group"
+author: "EconThaki"
 categories: oldhome
 tags: [documentation,sample,home]
 image: cuba-1.jpg
