--- a/_posts/2021-03-02-nosotros.md
+++ b/_posts/2021-03-02-nosotros.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Nosotros"
-author: "Econ Mentoring group"
+author: "EconThaki"
 categories: inicio
 tags: [sample]
 image: firstmeeting.png
