--- a/_posts/2021-03-02-recursos1.md
+++ b/_posts/2021-03-02-recursos1.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Recursos PreDoc"
-author: "Econ Mentoring Group"
+author: "EconThaki"
 categories: resources
 tags: [documentation,sample, resources]
 image: arctic-4.jpg
