--- a/_posts/2021-03-02-talleres1.md
+++ b/_posts/2021-03-02-talleres1.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Talleres y Charlas Generales"
-author: "Econ Mentoring Group"
+author: "EconThaki"
 categories: talleres
 tags: [documentation,sample, talleres]
 image: arctic-4.jpg
