--- a/_posts/2021-03-04-acerca-de.md
+++ b/_posts/2021-03-04-acerca-de.md
@@ -1,13 +1,13 @@
 ---
 layout: post
 title: "Acerca de"
-author: "Econ Mentoring group"
+author: "EconThaki"
 categories: inicio
 tags: [sample]
 image: firstmeeting.png
 ---
 
-EMLA es un grupo de economistas de un background diverso
+EconThaki es un grupo de economistas de un background diverso
 
 ## Historia
 
