--- a/_posts/2021-03-02-voces-samp1.md
+++ b/_posts/2021-03-02-voces-samp1.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Voces"
-author: "Econ Mentoring Group"
+author: "EconThaki"
 categories: voces
 tags: [sample]
 image: firstmeeting.png
