--- a/_posts/2021-01-05-acercade.md
+++ b/_posts/2021-01-05-acercade.md
@@ -1,7 +1,10 @@
 ---
 layout: post
 title: Acerca de
-comments: true
+author: EconThaki
+categories: [acercade]
+image: assets/images/firstmeeting.png
+featured: true
 ---
 
 **Acerca de nosotros**
