--- a/_posts/2021-01-05-recursos.md
+++ b/_posts/2021-01-05-recursos.md
@@ -1,7 +1,8 @@
 ---
-layout: page
+layout: post
 title: Recursos
-comments: true
+author: EconThaki
+categories: [recursos]
 image: assets/images/firstmeeting.png
 ---
 
