--- a/_posts/2021-01-05-voces.md
+++ b/_posts/2021-01-05-voces.md
@@ -3,6 +3,8 @@ layout: post
 title: Voces
 comments: true
 author: EconThaki
+categories: [Voces]
+image: assets/images/firstmeeting.png
 ---
 
 **Voces**
