--- a/_posts/2021-01-05-recursos.md
+++ b/_posts/2021-01-05-recursos.md
@@ -2,7 +2,7 @@
 layout: post
 title: Recursos
 author: EconThaki
-categories: [recursos]
+categories: [recursos1]
 image: assets/images/firstmeeting.png
 ---
 
