--- a/_posts/2021-01-05-recursos.md
+++ b/_posts/2021-01-05-recursos.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Recursos
+title: "Recursos"
 author: EconThaki
 categories: [recursos1]
 image: assets/images/firstmeeting.png
