--- a/_posts/2021-01-05-acercade.md
+++ b/_posts/2021-01-05-acercade.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Acerca de
+title: "Acerca de"
 author: EconThaki
 categories: [acercade]
 image: assets/images/firstmeeting.png
