--- a/_posts/2021-01-05-voces.md
+++ b/_posts/2021-01-05-voces.md
@@ -4,7 +4,7 @@ title: "Voces"
 comments: true
 author: EconThaki
 categories: [Voces]
-image: assets/images/firstmeeting.png
+image: assets/images/shutterstock_1733262980.jpg
 ---
 
 **Voces**
@@ -12,7 +12,7 @@ image: assets/images/firstmeeting.png
 En esta sección, entrevistamos y resaltamos el trabajo de estudiantes de la comunidad latina estudiando el Doctorado o recién egresados de él.
 
 
-![voces]({{site.baseurl}}/assets/images/voces.jpg)
+![voces]({{site.baseurl}}/assets/images/shutterstock_1733262980.jpg)
 
 
 
