--- a/_posts/2021-01-05-recursos.md
+++ b/_posts/2021-01-05-recursos.md
@@ -3,7 +3,7 @@ layout: post
 title: "Recursos"
 author: EconThaki
 categories: [recursos]
-image: assets/images/firstmeeting.png
+image: assets/images/shutterstock_1783073450.jpg
 ---
 
 
