some name changes
author and names

--- a/_posts/2021-01-05-recursos.md
+++ b/_posts/2021-01-05-recursos.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Recursos"
-author: EconThaki
+author: econthaki
 categories: [recursos]
 image: assets/images/shutterstock_1783073450.jpg
 ---
