--- a/_posts/2021-01-05-voces.md
+++ b/_posts/2021-01-05-voces.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Voces"
 comments: true
-author: selene
+author: econthaki
 categories: [Voces]
 image: assets/images/shutterstock_1733262980.jpg
 ---
