--- a/_posts/2021-01-05-acercade.md
+++ b/_posts/2021-01-05-acercade.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Acerca de"
-author: EconThaki
+author: econthaki
 categories: [acercade]
 image: assets/images/firstmeeting.png
 featured: true
