--- a/_posts/2021-01-05-acercade.md
+++ b/_posts/2021-01-05-acercade.md
@@ -29,5 +29,18 @@ Una academia en economía más grande, diversa y rigurosa.
 
 **El equipo**
 
-(Imágenes de los 5 en caricatura y nombres. Links a sus páginas si quieren)
-
+<table>
+  <tr>
+    <td> <img src="o_brian.jpg"  alt="1" width = 360px height = 640px ></td>
+    <td><img src="o_selene.jpg" alt="2" width = 360px height = 640px></td>
+   </tr> 
+   <tr>
+      <td><img src="o_gabriela.jpg" alt="3" width = 360px height = 640px></td>
+      <td><img src="o_paola.jpg" alt="4" width = 360px height = 640px>
+  </td>
+   <tr>
+      <td><img src="o_marcy.jpg" alt="5" width = 360px height = 640px></td>
+      <td><img src="o_jostin.jpg" alt="6" width = 360px height = 640px>
+  </td>  
+  </tr>
+</table>
