--- a/_posts/2021-01-05-acercade.md
+++ b/_posts/2021-01-05-acercade.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: "Acerca de"
+title: "¿Quiénes Somos?"
 author: econthaki
 categories: [acercade]
-image: assets/images/firstmeeting.png
+image: assets/images/logo.jpg
 featured: true
 ---
 
@@ -32,19 +32,19 @@ Una academia en economía más grande, diversa y rigurosa.
 
 <table align="center">
   <tr>
-    <td><img src="{{ site.baseurl }}/assets/images/o_brian.jpg"  alt="1" width = 360px height = 640px ></td>
+    <td><img src="{{ site.baseurl }}/assets/images/brian.PNG"  alt="1" width = 360px height = 640px ></td>
   </tr> 
   <tr>
     <td>Brian es Poeta, catador de caldo de pollo y PhD student en UMICH</td>
   </tr> 
   <tr>    
-    <td><img src="{{ site.baseurl }}/assets/images/o_selene.jpg" alt="2" width = 360px height = 640px></td>
+    <td><img src="{{ site.baseurl }}/assets/images/selene.PNG" alt="2" width = 360px height = 640px></td>
   </tr> 
   <tr>
     <td>Selene es Investigadora Asociada en JPAL</td>
   </tr>   
   <tr>
-      <td><img src="{{ site.baseurl }}/assets/images/o_gabriela.jpg" alt="3" width = 360px height = 640px></td>
+      <td><img src="{{ site.baseurl }}/assets/images/gablecaro.PNG" alt="3" width = 360px height = 640px></td>
   </tr> 
   <tr>
     <td>Investigadora Asociada en IPA</td>
