--- a/_posts/2021-01-05-recursos.md
+++ b/_posts/2021-01-05-recursos.md
@@ -3,7 +3,7 @@ layout: post
 title: "Recursos"
 author: econthaki
 categories: [recursos]
-image: assets/images/shutterstock_1783073450_filtro_v.jpg
+image: assets/images/shutterstock_1783073450_filtro_v.png
 ---
 
 
