--- a/_posts/2021-01-05-voces.md
+++ b/_posts/2021-01-05-voces.md
@@ -12,7 +12,7 @@ image: assets/images/shutterstock_1733262980_filtro_v.jpg
 En esta sección, entrevistamos y resaltamos el trabajo de estudiantes de la comunidad latina estudiando el Doctorado o recién egresados de él.
 
 
-![voces]({{site.baseurl}}/assets/images/shutterstock_1733262980.jpg)
+![voces]({{site.baseurl}}/assets/images/shutterstock_1733262980.png)
 
 
 
