--- a/_posts/2021-01-05-recursos.md
+++ b/_posts/2021-01-05-recursos.md
@@ -29,7 +29,7 @@ En esta sección encontrarás recursos que pueden servirte en el camino hacia la
   3. Lacea Mujeres
   4. BOWEN
 
-Si quieres que te listemos aquí, contáctanos  [Contacto][contacto-link]
+Si quieres que te listemos aquí,  [Contacto][contacto-link]
 
 [contacto-link]:   https://econthaki.github.io/contact.html
 
