--- a/_posts/2021-01-05-recursos.md
+++ b/_posts/2021-01-05-recursos.md
@@ -6,6 +6,7 @@ categories: [recursos]
 image: assets/images/shutterstock_1783073450_filtro_v.png
 ---
 
+Recursos útiles sobre el camino hacia el PhD y la academia
 
 **Recursos**
 
