--- a/_posts/2021-01-05-voces.md
+++ b/_posts/2021-01-05-voces.md
@@ -7,6 +7,8 @@ categories: [Voces]
 image: assets/images/shutterstock_1733262980_filtro_v.png
 ---
 
+Entrevistas a estudiantes del PhD de LAC.
+
 **Voces**
 
 En esta sección, entrevistamos y resaltamos el trabajo de estudiantes de la comunidad latina estudiando el Doctorado o recién egresados de él.
