--- a/_posts/2021-01-06-pregfreq.md
+++ b/_posts/2021-01-06-pregfreq.md
@@ -6,16 +6,19 @@ categories: [recursos]
 image: assets/images/shutterstock_1896800944.jpg
 ---
 
+Preguntas frecuentes sobre la organización y nuestras actividades
+
 
 **Preguntas frecuentes**
 
-¿Cuándo saldrán los resultados de la Encuesta de RAs en Economía en Lationamérica?
+¿Cuándo saldrán los resultados de la Encuesta de RAs en Economía en LAC?
 
-La encuesta está siendo difundida entre mayo a junio, el análisis se realizará durante julio. Así que esperamos presentar los resultados para agosto.
+La encuesta está siendo difundida durante julio, el análisis se realizará durante agosto. Esperamos tener los resultados del análisis listo para entre agosto y septiembre.
 
 ¿EconThaki es una ONG?
 
-Estamos en proceso de convertirnos en ONG a partir del 2022 y contar con la posibilidad de recibir donaciones. Comunicaremos nuestra conversión de manera oportuna a través de nuestras redes sociales. Si te interesa donar a nuestra causa, te recomendamos contactarte con nosotros aquí (link a contacto)
+Estamos en proceso de convertirnos en ONG a partir del 2022 para poder contar con la posibilidad de recibir donaciones. Comunicaremos nuestra conversión de manera oportuna a través de nuestras redes sociales. Si te interesa donar a nuestra causa, te recomendamos contactarte con nosotros aquí (link a contacto)
+
 
 ¿Puedo participar de los programas que dan?
 
