--- a/_posts/2021-01-05-acercade.md
+++ b/_posts/2021-01-05-acercade.md
@@ -49,7 +49,7 @@ Una academia en economía más grande, diversa y rigurosa.
     <td><img src="{{ site.baseurl }}/assets/images/o_paola.jpg" alt="4" width = 360px height = 640px></td>
   </tr>   
   <tr>      
-    <td>Investigadora Asociada en IPA</td>
+    <td>Gabriela es Investigadora Asociada en IPA</td>
     <td>Paola es Pre-doctoral fellow en Princeton</td>
   </tr> 
   <tr>
