--- a/_posts/2021-01-05-acercade.md
+++ b/_posts/2021-01-05-acercade.md
@@ -46,7 +46,7 @@ Una academia en economía más grande, diversa y rigurosa.
   </tr>   
   <tr>
     <td><img src="{{ site.baseurl }}/assets/images/gablecaro.PNG" alt="3" width = 360px height = 640px></td>
-    <td><img src="{{ site.baseurl }}/assets/images/o_paola.jpg" alt="4" width = 360px height = 640px></td>
+    <td><img src="{{ site.baseurl }}/assets/images/paola.PNG" alt="4" width = 360px height = 640px></td>
   </tr>   
   <tr>      
     <td>Gabriela es Investigadora Asociada en IPA</td>
@@ -54,7 +54,7 @@ Una academia en economía más grande, diversa y rigurosa.
   </tr> 
   <tr>
       <td><img src="{{ site.baseurl }}/assets/images/o_marcy.jpg" alt="5" width = 360px height = 640px></td>      
-      <td><img src="{{ site.baseurl }}/assets/images/o_jostin.jpg" alt="6" width = 360px height = 640px> </td> 
+      <td><img src="{{ site.baseurl }}/assets/images/jostin.PNG" alt="6" width = 360px height = 640px> </td> 
   </tr>
   <tr>
     <td>Marcy es asistente de investigación en el BID</td>
