--- a/_posts/2021-01-05-acercade.md
+++ b/_posts/2021-01-05-acercade.md
@@ -3,7 +3,7 @@ layout: post
 title: "¿Quiénes Somos?"
 author: econthaki
 categories: [acercade]
-image: assets/images/logo_sinfondo.png
+image: assets/images/log_hq.png
 featured: true
 ---
 Sobre EconThaki
