--- a/_posts/2021-01-05-recursos.md
+++ b/_posts/2021-01-05-recursos.md
@@ -112,6 +112,10 @@ En internet hay bastante información desperdigada en varios temas de interés. 
 - [Scarlet Chen - My Journey into Econ PhD](https://scarlet-chen.medium.com/my-journey-into-econ-phd-854cd892547b)
 - [Susan Athey - Professional Advice](https://athey.people.stanford.edu/professional-advice)
 
+## Recomendaciones sobre el Posgrado
+
+- [The Hidden Curriculum](https://podcasts.apple.com/us/podcast/the-hidden-curriculum/id1526729667)
+
 ## Otras compilaciones (bastante completas)
 
 - [Masayuki Kudamatsu - Tips 4 Economists](https://sites.google.com/site/mkudamatsu/tips4economists)
