--- a/_posts/2021-01-05-voces.md
+++ b/_posts/2021-01-05-voces.md
@@ -9,12 +9,9 @@ image: assets/images/shutterstock_1733262980_filtro_v.png
 
 Entrevistas a estudiantes del PhD de LAC.
 
-##Voces
+## Voces
 
 En esta sección, entrevistamos y resaltamos el trabajo de estudiantes de la comunidad latina estudiando el Doctorado o recién egresados de él.
-
-
-![voces]({{site.baseurl}}/assets/images/shutterstock_1941621475.jpg)
 
 
 **Últimas Actualizaciones:**
@@ -23,4 +20,6 @@ En esta sección, entrevistamos y resaltamos el trabajo de estudiantes de la com
 
 [voces-falba]:   https://econthaki.github.io/voces/2021/06/01/voces_falba.html
 
+
+![falba]({{site.baseurl}}/assets/images/Fabiola-Alba.jpg)
 
