removing filter color

--- a/_posts/2021-01-05-voces.md
+++ b/_posts/2021-01-05-voces.md
@@ -4,7 +4,7 @@ title: "Voces"
 comments: true
 author: econthaki
 categories: [Voces]
-image: assets/images/shutterstock_1733262980_filtro_v.png
+image: assets/images/shutterstock_1733262980.jpg
 ---
 
 Entrevistas a estudiantes del PhD de LAC.
