--- a/_posts/2021-01-06-pregfreq.md
+++ b/_posts/2021-01-06-pregfreq.md
@@ -3,7 +3,7 @@ layout: post
 title: "Preguntas Frecuentes"
 author: econthaki
 categories: [recursos]
-image: assets/images/shutterstock_1720826170_filtro_v.png
+image: assets/images/shutterstock_1896800944.jpg
 ---
 
 Preguntas frecuentes sobre la organización y nuestras actividades
