changing twitter links and color to teal

--- a/_posts/2021-01-05-recursos.md
+++ b/_posts/2021-01-05-recursos.md
@@ -56,7 +56,7 @@ En internet hay bastante información desperdigada en varios temas de interés. 
 
 ## Aplicación al Ph.D.
 
-- Nuestra gúia para aplicar desde Perú *link*
+- [Nuestra gúia para aplicar desde Perú](https://econthaki.github.io/Guia-PhD-EconThaki/)
 - [Aplicar desde argentina](https://aplicardesdeargentina.weebly.com/)
 - [Aplicar desde México](https://twitter.com/AplicarDesdeMx)
 - [Alvin Christian - Applying to Economics PhD Programs Memo](https://drive.google.com/file/d/1QozD6_4_bvMd2o-q-yh9Doc5aQ6i3nPV/view?usp=sharing)
