--- a/_posts/2021-01-05-acercade.md
+++ b/_posts/2021-01-05-acercade.md
@@ -42,21 +42,21 @@ Una academia en economía más grande, diversa y rigurosa.
     <td><img src="{{ site.baseurl }}/assets/images/selene.PNG" alt="2" width = 300px height = 600px></td>
   </tr> 
   <tr>
-    <td>Brian es Poeta, catador de caldo de pollo y PhD student en UMICH</td>
-    <td>Selene es Investigadora Asociada en JPAL</td>
+    <td>Brian es Poeta, catador de caldo de pollo y PhD student en UMICH. Su cuenta de Twitter es: [@bdazav](https://twitter.com/bdazav) </td>
+    <td>Selene es Investigadora Asociada en JPA. Su cuenta de Twitter es: [@selenedelpi](https://twitter.com/selenedelpi) </td>
   </tr>   
   <tr>
     <td><img src="{{ site.baseurl }}/assets/images/gablecaro.PNG" alt="3" width = 300px height = 600px></td>
     <td><img src="{{ site.baseurl }}/assets/images/paola.PNG" alt="4" width = 300px height = 600px></td>
   </tr>   
   <tr>      
-    <td>Gabriela es Investigadora Asociada en IPA</td>
-    <td>Paola es Pre-doctoral fellow en Princeton</td>
+    <td>Gabriela es Investigadora Asociada en IPA. Su cuenta de Twitter es: [@GabLecaro](https://twitter.com/GabLecaro) </td>
+    <td>Paola es Pre-doctoral fellow en Princeton. Su cuenta de Twitter es: [@paola_villaparo](https://twitter.com/paola_villaparo) </td>
   </tr> 
   <tr>
       <td><img src="{{ site.baseurl }}/assets/images/jostin.PNG" alt="6" width = 300px height = 600px> </td> 
   </tr>
   <tr>
-    <td>Jostin es Investigador Asociado en JPAL</td>
+    <td>Jostin es Investigador Asociado en JPAL. Su cuenta de Twitter es: [@JKitmang](https://twitter.com/JKitmang)</td>
   </tr>   
 </table>
