Update descripcion voces

--- a/_posts/2021-01-05-voces.md
+++ b/_posts/2021-01-05-voces.md
@@ -11,7 +11,7 @@ Entrevistas a estudiantes del PhD de LAC.
 
 ## Voces
 
-En esta sección, entrevistamos y resaltamos el trabajo de estudiantes de la comunidad latina estudiando el Doctorado o recién egresados de él.
+En esta sección, entrevistamos y resaltamos el trabajo de estudiantes de la comunidad latina estudiando el Doctorado o recién egresados de él. Cada mes, habrá una entrevista nueva.
 
 
 **Últimas Actualizaciones:**
