--- a/_posts/2021-01-06-pregfreq.md
+++ b/_posts/2021-01-06-pregfreq.md
@@ -11,30 +11,30 @@ Preguntas frecuentes sobre la organización y nuestras actividades
 
 ## Preguntas frecuentes
 
-**¿Cuándo saldrán los resultados de la Encuesta de RAs en Economía en LAC?**
-
-La encuesta está siendo difundida durante julio, el análisis se realizará durante agosto. Esperamos tener los resultados del análisis listo para entre agosto y septiembre.
-
 **¿EconThaki es una ONG?**
 
 Estamos en proceso de convertirnos en ONG a partir del 2022 para poder contar con la posibilidad de recibir donaciones. Comunicaremos nuestra conversión de manera oportuna a través de nuestras redes sociales. Si te interesa donar a nuestra causa, te recomendamos contactarte con nosotros aquí [Contacto][contacto-link]
 
 [contacto-link]:   https://econthaki.github.io/contact.html
 
+**Quiero participar de la Encuesta de RAs en Economía en LAC, ¿cuándo podré hacerlo?**
 
-**¿Puedo participar de los programas que dan?**
+La encuesta será difundida desde inicios de agosto del 2021. La población objetivo de la encuesta son asistentes de investigación de economía - o que lo hayan sido en los últimos 3 años- que tengan alguna relación con LAC. Una vez que salga, les invitamos a participar y a compartir la encuesta entre sus conocidas que también entren dentro de la población objetivo. El análisis se realizará durante setiembre y esperamos tener los resultados listos para el fin de septiembre.
 
-Si eres estudiante de pregrado de economía o carreras afines (políticas públicas, ingeniería económica, estadística, etc.), tienes nacionalidad peruana, estás al menos a dos años de egresar del pregrado o egresaste a lo más hace 2 años, tienes interés o curiosidad por la academia y cómo hacer investigación en temas de economía y afines, tienes poca o nula exposición al mundo de la investigación cumples con los requisitos para ser parte de los programas que ofrecemos. Sobre todo, alentamos a participapar población subrepresentada en la academia actualmente: estudiantes de universidades públicas, mujeres, de regiones, población indígena y afroperuana, LGTBIQ, personas con discapacidad y víctimas de conflicto armado interno.
+**¿Puedo participar de los programas que darán?**
+
+Si eres estudiante de pregrado de economía o carreras afines (políticas públicas, ingeniería económica, estadística, etc.), tienes nacionalidad peruana, estás al menos a un año de egresar del pregrado o egresaste a lo más hace 2 años, tienes interés o curiosidad por la academia y cómo hacer investigación en temas de economía y afines, tienes poca o nula exposición al mundo de la investigación cumples con los requisitos para ser parte de los programas que ofreceremos. Sobre todo, alentamos a participapar población subrepresentada en la academia actualmente: estudiantes de universidades públicas, mujeres, de regiones, población indígena y afroperuana, LGTBIQ, personas con discapacidad y víctimas de conflicto armado interno.
 
 **¿Por qué solo tienen operaciones en Perú?**
 
-Sabemos que las realidades de los distintos países de América Latina y el Caribe son heterogéneas. Comenzaremos operaciones en Perú porque el contenido de los talleres y estrategias para postular al posgrado está acotado para Perú. Esto será para el primer año de la organización, 2021, pero buscaremos expandirnos para los siguientes.
+Sabemos que las realidades de los distintos países de América Latina y el Caribe son heterogéneas. Comenzaremos operaciones en Perú porque el contenido de los talleres y estrategias para postular al posgrado está acotado para Perú. Esto será así para el primer año de la organización, ciclo 2021-2022. No obstante, buscaremos expandir operaciones para los ciclos venideros.
 
 **¿Cómo hago para participar como mentor del programa?**
 
-A partir de Agosto, abriremos convocatoria para participar como mentores. 
+A partir de Setiembre 2021, abriremos convocatoria para participar como mentores. 
 
-Los requisitos *para ser mentor junior* son: Ser asistente de investigación con al menos 3 años de experiencia o ya haber pasado por un proceso de aplicación al doctorado o ser estudiante de doctorados de economía o afines en los primeros años | *Para ser mentor senior*: ser estudiante del doctorado en Economía o afines con proyectos de investigación propios o recién graduados de programas doctorales en el exterior.
+Los requisitos *para ser mentor junior* son: Ser asistente de investigación con al menos 3 años de experiencia o ya haber pasado por un proceso de aplicación al doctorado o ser estudiante de doctorados de economía o afines en los primeros años.
+*Para ser mentor senior*: ser estudiante del doctorado en Economía o afines con proyectos de investigación propios o recién graduados de programas doctorales en el exterior.
 
 **¿Cómo hago para participar del equipo de EconThaki?**
 
