Update texto AcercaDe

--- a/_posts/2021-01-05-acercade.md
+++ b/_posts/2021-01-05-acercade.md
@@ -14,8 +14,7 @@ EconThaki es una organización que tiene como objetivo incrementar la diversidad
 
 **Nuestro logo**
 
-Nuestro logo está inspirado en la “chakana”, o “cruz andina”, símbolo milenario que usaron nuestros pueblos originarios de los Andes centrales en América del Sur y que remembra una escalera de cuatro lados. Su forma se asocia con la unión entre lo bajo y lo alto, la tierra y el sol, el ser humano y lo divino. De esta forma, la chakana no solo comprende un concepto arquitectónico o geométrico, sino que toma el significado de "escalera -o puente- hacia lo más elevado". 
-
+Nuestro logo está inspirado en la “chakana”, o “cruz andina”, símbolo milenario que usaron nuestros pueblos originarios de los Andes centrales en América del Sur y que remembra una escalera de cuatro lados. Su forma se asocia con la unión entre lo bajo y lo alto, la tierra y el sol, el ser humano y lo divino. De esta forma, la chakana no solo comprende un concepto arquitectónico o geométrico, sino que toma el significado de "escalera -o puente- hacia lo más elevado" y nosotros apuntamos a aumentar la diversidad para que la academia sea de mayor calidad.
 
 **Nuestra misión**
 
@@ -44,7 +43,7 @@ Una academia en economía más grande, diversa y rigurosa.
   <tr>
     <td>Brian es Poeta, catador de caldo de pollo y PhD student en UMICH. Su cuenta de Twitter es: <a href="https://twitter.com/bdazav"> @bdazav</a>
     </td>
-    <td>Selene es Investigadora Asociada en JPA. Su cuenta de Twitter es: <a href="https://twitter.com/selenedelpi"> @selenedelpi</a>
+    <td>Selene es creadora de playlists y Asociada de Investigación Senior en J-PAL LAC. Su cuenta de Twitter es: <a href="https://twitter.com/selenedelpi"> @selenedelpi</a>
     </td>
   </tr>   
   <tr>
@@ -52,7 +51,7 @@ Una academia en economía más grande, diversa y rigurosa.
     <td><img src="{{ site.baseurl }}/assets/images/paola.PNG" alt="4" width = 300px height = 600px></td>
   </tr>   
   <tr>      
-    <td>Gabriela es Investigadora Asociada en IPA. Su cuenta de Twitter es: <a href="https://twitter.com/GabLecaro"> @GabLecaro</a>
+    <td>Gabriela es Asociada de Investigación en IPA. Su cuenta de Twitter es: <a href="https://twitter.com/GabLecaro"> @GabLecaro</a>
     </td>
     <td>Paola es Pre-doctoral fellow en Princeton. Su cuenta de Twitter es: <a href="https://twitter.com/paola_villaparo"> @paola_villaparo</a>
     </td>
@@ -61,7 +60,7 @@ Una academia en economía más grande, diversa y rigurosa.
       <td><img src="{{ site.baseurl }}/assets/images/jostin.PNG" alt="6" width = 300px height = 600px> </td> 
   </tr>
   <tr>
-    <td>Jostin es Investigador Asociado en JPAL. Su cuenta de Twitter es:  <a href="https://twitter.com/JKitmang"> @JKitmang</a>
+    <td>Jostin es Asociada de Investigación Senior en J-PAL LAC. Su cuenta de Twitter es:  <a href="https://twitter.com/JKitmang"> @JKitmang</a>
     </td>
   </tr>   
 </table>
