--- a/_posts/2021-01-05-acercade.md
+++ b/_posts/2021-01-05-acercade.md
@@ -41,9 +41,9 @@ Una academia en economía más grande, diversa y rigurosa.
     <td><img src="{{ site.baseurl }}/assets/images/selene.PNG" alt="2" width = 300px height = 600px></td>
   </tr> 
   <tr>
-    <td>Brian es Poeta, catador de caldo de pollo y PhD student en UMICH. Su cuenta de Twitter es: <a href="https://twitter.com/bdazav"> @bdazav</a>
+    <td>Brian es Poeta, catador de leche de tigre y PhD student en UMICH. Su cuenta de Twitter es: <a href="https://twitter.com/bdazav"> @bdazav</a>
     </td>
-    <td>Selene es creadora de playlists y Asociada de Investigación Senior en J-PAL LAC. Su cuenta de Twitter es: <a href="https://twitter.com/selenedelpi"> @selenedelpi</a>
+    <td>Selene es foodie, creadora de playlists y RA Senior en J-PAL LAC. Su cuenta de Twitter es: <a href="https://twitter.com/selenedelpi"> @selenedelpi</a>
     </td>
   </tr>   
   <tr>
@@ -51,16 +51,16 @@ Una academia en economía más grande, diversa y rigurosa.
     <td><img src="{{ site.baseurl }}/assets/images/paola.PNG" alt="4" width = 300px height = 600px></td>
   </tr>   
   <tr>      
-    <td>Gabriela es Asociada de Investigación en IPA. Su cuenta de Twitter es: <a href="https://twitter.com/GabLecaro"> @GabLecaro</a>
+    <td>Gabriela es Mother of Plants, fanática del café y Asociada de Investigación en IPA. Su cuenta de Twitter es: <a href="https://twitter.com/GabLecaro"> @GabLecaro</a>
     </td>
-    <td>Paola es Pre-doctoral fellow en Princeton. Su cuenta de Twitter es: <a href="https://twitter.com/paola_villaparo"> @paola_villaparo</a>
+    <td>Paola es Princesa Inca y Pre-doctoral fellow en Princeton. Su cuenta de Twitter es: <a href="https://twitter.com/paola_villaparo"> @paola_villaparo</a>
     </td>
   </tr> 
   <tr>
       <td><img src="{{ site.baseurl }}/assets/images/jostin.PNG" alt="6" width = 300px height = 600px> </td> 
   </tr>
   <tr>
-    <td>Jostin es Asociada de Investigación Senior en J-PAL LAC. Su cuenta de Twitter es:  <a href="https://twitter.com/JKitmang"> @JKitmang</a>
+    <td>Jostin es amante de la comida y el reggaeton y RA Senior en J-PAL LAC. Su cuenta de Twitter es:  <a href="https://twitter.com/JKitmang"> @JKitmang</a>
     </td>
   </tr>   
 </table>
