Update texto AcercaDe

--- a/_posts/2021-01-05-acercade.md
+++ b/_posts/2021-01-05-acercade.md
@@ -14,7 +14,7 @@ EconThaki es una organización que tiene como objetivo incrementar la diversidad
 
 **Nuestro logo**
 
-Nuestro logo está inspirado en la “chakana”, o “cruz andina”, símbolo milenario que usaron nuestros pueblos originarios de los Andes centrales en América del Sur y que remembra una escalera de cuatro lados. Su forma se asocia con la unión entre lo bajo y lo alto, la tierra y el sol, el ser humano y lo divino. De esta forma, la chakana no solo comprende un concepto arquitectónico o geométrico, sino que toma el significado de "escalera -o puente- hacia lo más elevado" y nosotros apuntamos a aumentar la diversidad para que la academia sea de mayor calidad.
+Nuestro logo está inspirado en la “chakana”, o “cruz andina”, símbolo milenario que usaron nuestros pueblos originarios de los Andes centrales en América del Sur y que remembra una escalera de cuatro lados. Su forma se asocia con la unión entre lo bajo y lo alto, la tierra y el sol, el ser humano y lo divino. De esta forma, la chakana no solo comprende un concepto arquitectónico o geométrico, sino que toma el significado de "escalera -o puente- hacia lo más elevado" y nosotros apuntamos a aumentar la diversidad para que la elevar la calidad de la academia en economía.
 
 **Nuestra misión**
 
