--- a/_posts/2021-01-06-pregfreq.md
+++ b/_posts/2021-01-06-pregfreq.md
@@ -23,18 +23,18 @@ La encuesta será difundida desde inicios de agosto del 2021. La población obje
 
 **¿Puedo participar de los programas que darán?**
 
-Si eres estudiante de pregrado de economía o carreras afines (políticas públicas, ingeniería económica, estadística, etc.), tienes nacionalidad peruana, estás al menos a un año de egresar del pregrado o egresaste a lo más hace 2 años, tienes interés o curiosidad por la academia y cómo hacer investigación en temas de economía y afines, tienes poca o nula exposición al mundo de la investigación cumples con los requisitos para ser parte de los programas que ofreceremos. Sobre todo, alentamos a participapar población subrepresentada en la academia actualmente: estudiantes de universidades públicas, mujeres, de regiones, población indígena y afroperuana, LGTBIQ, personas con discapacidad y víctimas de conflicto armado interno.
+Si eres estudiante de pregrado de economía o carreras afines (políticas públicas, ingeniería económica, estadística, etc.), tienes nacionalidad peruana, estás al menos a un año de egresar del pregrado o egresaste a lo más hace 2 años, tienes interés o curiosidad por la academia y cómo hacer investigación en temas de economía y afines, tienes poca o nula exposición al mundo de la investigación cumples con los requisitos para ser parte de los programas que ofreceremos. Sobre todo, alentamos a participapar población subrepresentada en la academia actualmente: estudiantes de universidades públicas, mujeres, de regiones, población indígena y afroperuana, LGTBIQ, personas con discapacidad y víctimas de conflicto armado interno. 
 
 **¿Por qué solo tienen operaciones en Perú?**
 
 Sabemos que las realidades de los distintos países de América Latina y el Caribe son heterogéneas. Comenzaremos operaciones en Perú porque el contenido de los talleres y estrategias para postular al posgrado está acotado para Perú. Esto será así para el primer año de la organización, ciclo 2021-2022. No obstante, buscaremos expandir operaciones para los ciclos venideros.
 
+**¿Cuándo se abrirá la convocatoria para participar de los programas?**
+Nuestro programa cuenta de tres fases componen un ciclo de 1 año. La fase 1 (talleres informativos) va de setiembre a octubre. La convocatoria para la fase 2 (capacitación) va de noviembre a diciembre. La fase 2 va de enero a febrero y la fase 3 (mentorías), de marzo a agosto. Comunicaremos la convocatoria a nuestros programas por nuestras redes sociales. Así que ¡a prestar atención!
+
 **¿Cómo hago para participar como mentor del programa?**
 
-A partir de Setiembre 2021, abriremos convocatoria para participar como mentores. 
-
-Los requisitos *para ser mentor junior* son: Ser asistente de investigación con al menos 3 años de experiencia o ya haber pasado por un proceso de aplicación al doctorado o ser estudiante de doctorados de economía o afines en los primeros años.
-*Para ser mentor senior*: ser estudiante del doctorado en Economía o afines con proyectos de investigación propios o recién graduados de programas doctorales en el exterior.
+A partir de Setiembre 2021, abriremos convocatoria para participar como mentores. Los requisitos para ser *mentor junior* son: Ser asistente de investigación con al menos 3 años de experiencia o ya haber pasado por un proceso de aplicación al doctorado o ser estudiante de doctorados de economía o afines en los primeros años. Para ser *mentor senior*: ser estudiante del doctorado en Economía o afines con proyectos de investigación propios o recién graduados de programas doctorales en el exterior.
 
 **¿Cómo hago para participar del equipo de EconThaki?**
 
