--- a/_posts/2021-01-05-recursos.md
+++ b/_posts/2021-01-05-recursos.md
@@ -112,9 +112,9 @@ En internet hay bastante información desperdigada en varios temas de interés. 
 - [Scarlet Chen - My Journey into Econ PhD](https://scarlet-chen.medium.com/my-journey-into-econ-phd-854cd892547b)
 - [Susan Athey - Professional Advice](https://athey.people.stanford.edu/professional-advice)
 
-## Recomendaciones sobre el Posgrado
+## Recomendaciones sobre la vida académica en Economía
 
-- [The Hidden Curriculum](https://podcasts.apple.com/us/podcast/the-hidden-curriculum/id1526729667)
+- [The Hidden Curriculum (Podcast)](https://podcasts.apple.com/us/podcast/the-hidden-curriculum/id1526729667)
 
 ## Otras compilaciones (bastante completas)
 
@@ -135,7 +135,7 @@ En internet hay bastante información desperdigada en varios temas de interés. 
 - [LSE Economics PhD Applicant Mentoring Programme](https://www.lse.ac.uk/economics/study/research/applicant-mentoring-programme)
 - [Student-led MIT and Harvard Application Assistance and Mentoring Program](http://economics.mit.edu/graduate/application)
 
-## Cursosde matemática
+## Cursos de matemática
 
 - [Columbia MA Math Camp](https://cesarbarilla.github.io/Columbia-MA-Math-Camp-2021/)
 - [UC Berkeley PhD Math Camp](https://eml.berkeley.edu/~cshannon/e204_19.html)
