--- a/_posts/2021-01-05-acercade.md
+++ b/_posts/2021-01-05-acercade.md
@@ -58,9 +58,12 @@ Una academia en economía más grande, diversa y rigurosa.
   </tr> 
   <tr>
       <td><img src="{{ site.baseurl }}/assets/images/jostin.PNG" alt="6" width = 300px height = 600px> </td> 
+      <td><img src="{{ site.baseurl }}/assets/images/Sebastian.PNG" alt="6" width = 300px height = 600px> </td> 
   </tr>
   <tr>
     <td>Jostin es amante de la comida y el reggaeton y RA Senior en J-PAL LAC. Su cuenta de Twitter es:  <a href="https://twitter.com/JKitmang"> @JKitmang</a>
+    </td>
+    <td>Sebastian es Profesor Asistente de Economía y Políticas en la UVA. Su cuenta de Twitter es:  <a href="https://twitter.com/dsebastiantello"> @dsebastiantello</a>
     </td>
   </tr>   
 </table>
