Update: Pao - universidad de

--- a/_posts/2021-01-05-acercade.md
+++ b/_posts/2021-01-05-acercade.md
@@ -53,7 +53,7 @@ Una academia en economía más grande, diversa y rigurosa.
   <tr>      
     <td>Gabriela es Mother of Plants, fanática del café y Asociada de Investigación en IPA. Su cuenta de Twitter es: <a href="https://twitter.com/GabLecaro"> @GabLecaro</a>
     </td>
-    <td>Paola es Princesa Inca y Pre-doctoral fellow en Princeton. Su cuenta de Twitter es: <a href="https://twitter.com/paola_villaparo"> @paola_villaparo</a>
+    <td>Paola es Princesa Inca y Pre-doctoral fellow en la Universidad de Princeton. Su cuenta de Twitter es: <a href="https://twitter.com/paola_villaparo"> @paola_villaparo</a>
     </td>
   </tr> 
   <tr>
