--- a/_posts/2021-01-05-acercade.md
+++ b/_posts/2021-01-05-acercade.md
@@ -43,7 +43,7 @@ Una academia en economía más grande, diversa y rigurosa.
   <tr>
     <td>Brian es Poeta, catador de leche de tigre y PhD student en UMICH. Su cuenta de Twitter es: <a href="https://twitter.com/bdazav"> @bdazav</a>
     </td>
-    <td>Selene es foodie, creadora de playlists y RA Senior en J-PAL LAC. Su cuenta de Twitter es: <a href="https://twitter.com/selenedelpi"> @selenedelpi</a>
+    <td>Selene es foodie, playlister y RA Senior en J-PAL LAC. Su cuenta de Twitter es: <a href="https://twitter.com/selenedelpi"> @selenedelpi</a>
     </td>
   </tr>   
   <tr>
@@ -63,7 +63,7 @@ Una academia en economía más grande, diversa y rigurosa.
   <tr>
     <td>Jostin es amante de la comida y el reggaeton y RA Senior en J-PAL LAC. Su cuenta de Twitter es:  <a href="https://twitter.com/JKitmang"> @JKitmang</a>
     </td>
-    <td>Sebastian es Profesor Asistente de Economía y Políticas Públicas en la UVA. Su cuenta de Twitter es:  <a href="https://twitter.com/dsebastiantello"> @dsebastiantello</a>
+    <td>Sebastian es Podcaster y Profesor Asistente de Economía y Políticas Públicas en la UVA. Su cuenta de Twitter es:  <a href="https://twitter.com/dsebastiantello"> @dsebastiantello</a>
     </td>
   </tr>   
 </table>
