--- a/_posts/2021-01-05-recursos.md
+++ b/_posts/2021-01-05-recursos.md
@@ -56,8 +56,8 @@ En internet hay bastante información desperdigada en varios temas de interés. 
 
 ## Aplicación al Ph.D.
 
-- [Nuestra gúia para aplicar desde Perú](https://econthaki.github.io/Guia-PhD-EconThaki/)
-- [Aplicar desde argentina](https://aplicardesdeargentina.weebly.com/)
+- [Nuestra guía para aplicar desde Perú](https://econthaki.github.io/Guia-PhD-EconThaki/)
+- [Aplicar desde Argentina](https://aplicardesdeargentina.weebly.com/)
 - [Aplicar desde México](https://twitter.com/AplicarDesdeMx)
 - [Alvin Christian - Applying to Economics PhD Programs Memo](https://drive.google.com/file/d/1QozD6_4_bvMd2o-q-yh9Doc5aQ6i3nPV/view?usp=sharing)
 - [American Economic Association - Considerations for prospective graduate students in economics (¡Varios recursos!)](https://www.aeaweb.org/resources/students/grad-prep/considerations)
@@ -129,6 +129,7 @@ En internet hay bastante información desperdigada en varios temas de interés. 
 - [PeacehD - PhD Support Groups](https://twitter.com/PeacehDforPhD/status/1369917038760693761?s=09)
 - [Women in Econ Policy](https://www.womenineconpolicy.com/career-resources)
 - [WEconPol - Organisations Database](https://docs.google.com/spreadsheets/d/13dSrtr0iLstD1AhWpQWOUIzlGLq-Tc6OGreNKKDIELI/edit#gid=1557672198)
+- [Research in Color Foundation](https://www.researchincolor.org/)
 
 ## Oportunidades de Mentoría
 
