cursos de economia + micro

--- a/_posts/2021-01-05-recursos.md
+++ b/_posts/2021-01-05-recursos.md
@@ -143,6 +143,11 @@ En internet hay bastante información desperdigada en varios temas de interés. 
 - [Yale PhD Math Camp](https://economics.yale.edu/graduate/math-camp-notes )
 - En caso desees certificación formal: [Harvard Extension School - Math Course Catalog](https://courses.extension.harvard.edu/course-catalog/courses?keyword=math)
 
+## Cursos de economía y relacionados
+
+- [Remote Student Exchange](https://remotestudentexchange.org) - para auditar cursos gratis
+- [Curso de microeonometría aplicada](https://mauricio-romero.com/teaching/microeconometria-aplicada-otono-2021/) - del Prof. Mauricio Romero (ITAM), en español
+
 ## Oportunidades de financiamiento
 
 - [JHU - Compilación de Oportunidades de Financiamiento para PhD Students](https://twitter.com/deniswirtz/status/1402681868281991171)
