--- a/_posts/2021-01-06-pregfreq.md
+++ b/_posts/2021-01-06-pregfreq.md
@@ -19,7 +19,7 @@ Estamos en proceso de convertirnos en ONG a partir del 2022 para poder contar co
 
 **Quiero participar de la Encuesta de RAs en Economía en LAC, ¿cuándo podré hacerlo?**
 
-La encuesta será difundida desde inicios de agosto del 2021. La población objetivo de la encuesta son asistentes de investigación de economía - o que lo hayan sido en los últimos 3 años- que tengan alguna relación con LAC. Una vez que salga, les invitamos a participar y a compartir la encuesta entre sus conocidas que también entren dentro de la población objetivo. El análisis se realizará durante setiembre y esperamos tener los resultados listos para el fin de septiembre.
+La encuesta será difundida desde setiembre del 2021. La población objetivo de la encuesta son asistentes de investigación de economía - o que lo hayan sido en los últimos 3 años- que tengan alguna relación con LAC. Una vez que salga, les invitamos a participar y a compartir la encuesta entre sus conocidas que también entren dentro de la población objetivo. El análisis se realizará durante setiembre y esperamos tener los resultados listos para el fin de septiembre.
 
 **¿Puedo participar de los programas que darán?**
 
@@ -34,7 +34,7 @@ Nuestro programa cuenta de tres fases componen un ciclo de 1 año. La fase 1 (ta
 
 **¿Cómo hago para participar como mentor del programa?**
 
-A partir de Setiembre 2021, abriremos convocatoria para participar como mentores. Los requisitos para ser *mentor junior* son: Ser asistente de investigación con al menos 3 años de experiencia o ya haber pasado por un proceso de aplicación al doctorado o ser estudiante de doctorados de economía o afines en los primeros años. Para ser *mentor senior*: ser estudiante del doctorado en Economía o afines con proyectos de investigación propios o recién graduados de programas doctorales en el exterior.
+A partir de Noviembre 2021, abriremos convocatoria para participar como mentores. Los requisitos para ser *mentor junior* son: Ser asistente de investigación con al menos 3 años de experiencia o ya haber pasado por un proceso de aplicación al doctorado o ser estudiante de doctorados de economía o afines en los primeros años. Para ser *mentor senior*: ser estudiante del doctorado en Economía o afines con proyectos de investigación propios o recién graduados de programas doctorales en el exterior.
 
 **¿Cómo hago para participar del equipo de EconThaki?**
 
