--- a/_posts/2021-01-05-acercade.md
+++ b/_posts/2021-01-05-acercade.md
@@ -43,7 +43,7 @@ Una academia en economía más grande, diversa y rigurosa.
   <tr>
     <td>Brian es Poeta, catador de leche de tigre y PhD student en UMICH. Su cuenta de Twitter es: <a href="https://twitter.com/bdazav"> @bdazav</a>
     </td>
-    <td>Selene es foodie, playlister y RA Senior en J-PAL LAC. Su cuenta de Twitter es: <a href="https://twitter.com/selenedelpi"> @selenedelpi</a>
+    <td>Selene es foodie, playlister y MA student en BU. Su cuenta de Twitter es: <a href="https://twitter.com/selenedelpi"> @selenedelpi</a>
     </td>
   </tr>   
   <tr>
