--- a/_posts/2021-01-06-pregfreq.md
+++ b/_posts/2021-01-06-pregfreq.md
@@ -19,7 +19,9 @@ Estamos en proceso de convertirnos en ONG a partir del 2022 para poder contar co
 
 **Quiero participar de la Encuesta de RAs en Economía en LAC, ¿cuándo podré hacerlo?**
 
-La encuesta será difundida desde setiembre del 2021. La población objetivo de la encuesta son asistentes de investigación de economía - o que lo hayan sido en los últimos 3 años- que tengan alguna relación con LAC. Una vez que salga, les invitamos a participar y a compartir la encuesta entre sus conocidas que también entren dentro de la población objetivo. El análisis se realizará durante setiembre y esperamos tener los resultados listos para el fin de septiembre.
+La encuesta está siendo difundida desde setiembre del 2021. La población objetivo de la encuesta son asistentes de investigación de economía o carreras - o que lo hayan sido en los últimos 3 años- que tengan alguna relación con LAC. Pueden apoyarnos compartiendo el enlace a la [EAIE 2021][EAIE]
+
+[EAIE]:   https://econthaki.surveycto.com/collect/eaie_2021?caseid=
 
 **¿Puedo participar de los programas que darán?**
 
