--- a/_posts/2021-01-11-eventos.md
+++ b/_posts/2021-01-11-eventos.md
@@ -7,11 +7,7 @@ categories: [Eventos]
 image: assets/images/shutterstock_1940688052.jpg
 ---
 
-Eventos y Talleres de capacitación y difusión de información
-
-## Eventos Futuros
-
-- Programa “Econ-mienza” 
+EconThaki fomenta eventos informativos como talleres, conversaciones, workshops, etc. sobre el camino académico en economía.
 
 ## Eventos Pasados
 
