update materiales (IPA + Resumen)

--- a/_posts/2021-01-11-eventos.md
+++ b/_posts/2021-01-11-eventos.md
@@ -16,7 +16,10 @@ EconThaki fomenta eventos informativos como talleres, conversaciones, workshops,
 	    <img src="https://raw.githubusercontent.com/EconThaki/Materiales-Capacitaciones/main/imagendedifusion.jpeg"
 	         alt="Evento 1" style="width:504px;height:250px;">
 	</figure>
-	- Fecha: Miércoles Nov. 17 
+	- Fecha: Miércoles 17 Noviembre del 2021
+	- [Resumen del evento](https://github.com/EconThaki/Materiales-Capacitaciones/blob/main/Resumen_evento_RAs_LAC.pdf)
 	- [Caminos hacia posiciones de RAs o Pre-docs - Paula Pedro](https://github.com/EconThaki/Materiales-Capacitaciones/blob/main/211117_J-PAL%20LAC%20EconThaki.pdf)
+	- [Apoyando el Talento en Perú - Juan Manuel Hernández-Agramonte](https://github.com/EconThaki/Materiales-Capacitaciones/blob/main/211117_J-PAL%20LAC%20EconThaki.pdf)
+	- [Ejemplos de códigos y datasets: Datahub for Field Experiments in Economics and Public Policy](https://dataverse.harvard.edu/dataverse/DFEEP)
 	- [Ejemplos de Scripts (Do File) - Sara Restrepo](https://github.com/EconThaki/Materiales-Capacitaciones/blob/main/00.Final%20Do%20File.do)
 	- [Ejemplos de Scripts (R File) - Sara Restrepo](https://github.com/EconThaki/Materiales-Capacitaciones/blob/main/000_master_script.R)
